feat: Add batch dump logs and describe of selected k8s resources.